--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+env
 dist
 dist-ssr
 *.local
@@ -24,3 +25,4 @@ dist-ssr
 *.sw?
 
 node_modules
+.env
